# toolkit

./: .gitignore  CLAUDE.md  LICENSE  README.html  README.md  install.sh
.agent-memory/: memory.db
.claude-plugin/: marketplace.json
.plans/: session-state.json
assets/: toolkit.txt
docs/agents/: README.md  codex.md  crush.md  cursor.md  droid.md  gemini.md  groq.md  opencode.md  qwen.md  rlm-subcall.md
docs/commands/: README.md  agent-memory.md  agent-plan.md  agent-spec.md  compact.md  design.md  gherkin.md  haiku.md  handbook.md  implement.md  kiro.md  opus.md  restore.md  review.md  rlm.md  save.md  setup.md  stable.md  team.md  worktree.md
docs/optional/: README.md
docs/skills/: README.md  agent-memory.md  agent-viewer.md  codebase-to-course.md  just-bash.md
plugins/rr-config/: README.md
plugins/rr-config/.claude-plugin/: plugin.json
plugins/rr-config/agents/: cursor-agent.md  qwen-agent.md
plugins/rr-tools/commands/: rlm.md  (+1 more)
plugins/toolkit/: README.md  plugin.json
tools/agent-memory/: README.md  pyproject.toml
tools/agent-memory/src/agent_memory/: __init__.py  __main__.py  cli.py  code_indexer.py  config.py  crud.py  db.py  embedder.py  indexer.py  intelligence.py  navigator.py  parser.py  search.py  tree.py
tools/agent-memory/tests/: test_chunker.py  test_cli.py  test_cli_code.py  test_code_indexer.py  test_config.py  test_crud.py  test_db.py  test_embedder.py  test_indexer.py  test_navigator.py  test_parser.py  test_search.py  test_summarizer.py  test_tree.py
tools/agent-viewer/: CHANGELOG.md  CONTRIBUTING.md  install.sh  package.json
(+115 files in other folders)
