# ABOUTME: Package configuration for agent-memory CLI tool.
# ABOUTME: Defines dependencies, entry points, and build settings.

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory"
version = "0.1.0"
description = "Local hybrid search memory system for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "fastembed>=0.4.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
intelligence = ["claude-agent-sdk>=0.1.30"]
dev = ["pytest>=7.0"]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
